--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "Artem Shmatchenko",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.1.1",
     "css-loader": "^4.3.0",
@@ -31,6 +34,8 @@
   "dependencies": {
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "jquery-animated-headlines": "^1.0.0",
+    "popper.js": "^1.16.1",
+    "scrollit": "^1.0.5"
   }
 }
